--- a/Portfolio/wwwroot/index.html
+++ b/Portfolio/wwwroot/index.html
@@ -10,10 +10,38 @@
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+    <link rel="stylesheet" href="styles/Style.less">
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        <div class="loading">
+            <div class="finger finger-1">
+                <div class="finger-item">
+                    <span></span><i></i>
+                </div>
+            </div>
+            <div class="finger finger-2">
+                <div class="finger-item">
+                    <span></span><i></i>
+                </div>
+            </div>
+            <div class="finger finger-3">
+                <div class="finger-item">
+                    <span></span><i></i>
+                </div>
+            </div>
+            <div class="finger finger-4">
+                <div class="finger-item">
+                    <span></span><i></i>
+                </div>
+            </div>
+            <div class="last-finger">
+                <div class="last-finger-item"><i></i></div>
+            </div>
+        </div>
+
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
